tests/data/php/shouldpass/NamespacedClass.php
<?php

namespace BoxUK\Test;

/**
 * No package annotation because class is namespaced.
 * 
 */
class NamespacedClass {}
