tests/data/php/shouldfail/ConstructorName.php
<?php
/**
 * @package testdata.shouldfail
 */
class ConstructorName {
    /**
     * no dox
     */
    public function ConstructorName() {
                        
    }
}